@@ -1,3 +1,11 @@
+2007-02-09  Brian Cameron  <brian.cameron@sun.com>
+
+	* docs/C/gdm.xml, daemon/display.c, dameon/gdm.[ch],
+	  daemon/server.c, daemon/slave.c:  Add sockets command to start
+	  login procedure, to be used by gnome-screensaver and Fast User
+	  Switch applet.  Fixes enhancement request #335786.  Patch by
+	  Matthias Clasen <mclasen@redhat.com>.
+
 2007-02-08  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/gdmlogin.c, gui/greeter/greeter.c: Rework how the "Start
